# good-student

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/api/: routes.py  schemas.py
app/application/: bot_manager.py
app/core/: config.py  exceptions.py  factories.py
app/domain/: interfaces.py  lecture_bot.py  models.py
app/infrastructure/: bbb_playwright_client.py  selectors.py
