[project]
name = "good-student"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "playwright>=1.58.0",
    "uvicorn>=0.35.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.15.4",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    "migrations",
    "__pycache__",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "ASYNC", # async best practices
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
